tests/src/Loader/classloader/generics/Instantiation/Positive/MultipleInterface12.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Positive_MultipleInterface12_MultipleInterface12_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Positive_MultipleInterface12_MultipleInterface12_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Positive\\MultipleInterface12\\MultipleInterface12.cmd");
        }
    }
}
