tests/src/Loader/classloader/generics/Instantiation/Negative/param05.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Negative_param05_param05_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_param05_param05_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\param05\\param05.cmd");
        }
    }
}
